resources/bootstrap3/css/notification.css
#mm_friend_request {
    display: inline-block;
    cursor: pointer;
    margin-right: 10px;
    margin-bottom: 15px;
    height: 16px;
    width: 16px;

    background-image: url('../..//images/2.png');
}

#mm_messages {
    display: inline-block;
    cursor: pointer;
    margin-bottom: 7px;
    margin-right: 5px;
    height: 35px;
    width: 32px;

    background-image: url('../..//images/inbox.png');
}

#mm_notification {
    display: inline-block;
    cursor: pointer;
    margin-bottom: 10px;
    margin-right: 5px;
    height: 24px;
    width: 21px;

    background-image: url('../..//images/bell.png');
}
#mm_setting {
    display: inline-block;
    cursor: pointer;
    height: 25px;
    width: 28px;


}
#mm_setting a img{
    margin-bottom: 40px;
}


@media only screen and (min-width: 1200px) {
    #mm_notification_box, #mm_message_box, #mm_friend_request_box{
        right: 1px;
        height: 350px;
        width: 350px;
    }
}

@media only screen and (min-width: 992px) and (max-width: 1159px) {
   #mm_notification_box, #mm_message_box, #mm_friend_request_box{
        right: 1px;
        height: 325px;
        width: 325px;
    }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
     #mm_notification_box, #mm_message_box, #mm_friend_request_box{
        left: 1px;
        height: 300px;
        width: 300px;
    }
}
@media only screen and (min-width: 480px) and (max-width: 767px) {
    #mm_notification_box, #mm_message_box, #mm_friend_request_box{
        left: 1px;
        height: 275px;
        width: 275px;
    }
}

@media only screen and (max-width: 479px) {
    #mm_notification_box, #mm_message_box, #mm_friend_request_box{
        left: 1px;
        height: 250px;
        width: 250px;
    }
}


#mm_notification_box, #mm_message_box, #mm_friend_request_box{
    position: absolute;
    display: none;
    z-index: 101;
    color: black;
    background-color: #fff;
}
#mm_notification_box{
    top: 38px;
}
#mm_message_box{
    top: 40px;
}
#mm_friend_request_box{
    top: 33px;
}
.pagelet{
    background-color: white;
    margin-bottom: 1px;
    box-shadow: 0 0 1px #bbb;
    padding: 10px 5px;
}
.pagelet_divider{
    margin-top: 15px;
    margin-bottom: 15px;
    border-bottom: 1px solid lightgray;
}

.notification_box{
    background-color: #fff;
    font-size: 10px;
    padding: 5px;
}

.notification_box:hover{
    cursor: pointer;
    background-color: #7AB6EA;
}

.scroll_box_style{
max-height: 350px; 
overflow-x:hidden; 
overflow-y: scroll; 
border-left: 1px solid lightgray; 
border-right: 1px solid lightgray;
}
.notification_time_style{
    padding-left: 27px;
}
.see_all_anchor_style{
    text-align: center;
    font-weight: bold;
}
.follower_button_style{
background-color: #87C1F3; 
color: black;
font-size: 9px;
font-weight: bold;
line-height: 18px;
}
.notification_counter{
    background-color: red;
    border-radius: 2px;
    bottom: 30px;
    color: white;
    font-size: 10px;
    font-weight: bold;
    left: 10px;
    margin-top: 22px;
    padding: 2%;
    position: relative;
    text-align: center;
}

